# OTUS-AI

./: .gitignore
DZ1/: API_DOCUMENTATION.md  README.md  test_answers.json  test_answers.py
DZ1/app/: main.py
DZ1/frontend/: .gitignore  README.md  package-lock.json  package.json
DZ2/: codereview.md
DZ2/.clinerules/: rule-russian.md
DZ3/: README.md
DZ3/.clinerules/: rule-context.md  rule-doc.md  rule-styleguide.md
DZ3/docs/: BUTTON_TAGHELPER_EXAMPLE.md  ButtonAccessibilityTagHelper_Documentation.md  Razor_Component_Hot_Reload.md  Task 1-3.md
DZ4/: README.md
DZ4/.clinerules/: rule-skip.md
DZ4/agent/: .env.example  README.md  demo_agent.py  langchain_agent.py  requirements.txt  test.py  test2.py  test_langchain_agent.py  test_str_repr.py  test_str_repr_simple.py  test_tojson.py  test_tojson_simple.py
DZ4/backend/: README.md  app.db  app.py  test_server.py
DZ5/: README.md
DZ5/.codeassistant/: mcp.json
DZ5/jwt/: .coverage  PROJECT_SUMMARY.md  README.md  main.py  metrics.json  pyproject.toml  requirements.txt  simple_test.py  test_client.py  test_jwt_service.py
DZ5/mcp/: README.md  jwt_test_runner.py  pyproject.toml
DZ5/test/: TESTING_SUMMARY.md  code_assistant_task_feb-3-2026_11-45-11-am.md  jwt_test_results.md  report.html  report.xml
TaskHistory/: code_assistant_task_jan-18-2026_8-35-02-pm.md  code_assistant_task_jan-21-2026_4-45-24-pm.md  code_assistant_task_jan-21-2026_5-31-22-pm.md  code_assistant_task_jan-21-2026_5-42-35-pm.md  code_assistant_task_jan-21-2026_5-52-07-pm.md  code_assistant_task_jan-21-2026_6-10-28-pm.md
(+42 files in other folders)
