[project]
name = "jwt-test-runner"
version = "0.1.0"
description = "MCP server for JWT project testing and reporting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.21.0",
    "pytest>=8.0.0",
    "coverage>=7.0.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "fastmcp>=2.14.4",
    "pytest-json-report>=1.5.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]

[project.scripts]
jwt-test-runner = "jwt_test_runner:main"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["README.md"]

[tool.ruff.lint]
select = [
    "C4",   # flake8-comprehensions
    "C90",  # mccabe
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "PERF", # Perflint
    "PL",   # Pylint
    "UP",   # pyupgrade
]
ignore = ["PERF203", "PLC0415", "PLR0402"]
mccabe.max-complexity = 24 # Default is 10

[tool.ruff.lint.pylint]
allow-magic-value-types = ["bytes", "float", "int", "str"]
max-args = 23                                              # Default is 5
max-branches = 23                                          # Default is 12
max-returns = 13                                           # Default is 6
max-statements = 102                                       # Default is 50
